src/objects/Customer_Pay_Plan_Header__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Demanded_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>total amount for which demand has been raised so far.</description>
        <label>Amount Demanded Till Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Recd_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Recd Till Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_to_be_Reduced__c</fullName>
        <label>Amount to be Reduced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effect_From_Date__c</fullName>
        <label>Effect From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effect_To_Date__c</fullName>
        <label>Effect To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Global_Charge_Name__c</fullName>
        <formula>Global_Charges__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Charge Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Charges</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Int_Flatcost_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int Flatcost (Due)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_Flatcost_Pending__c</fullName>
        <formula>Int_Flatcost_Due__c - ( Int_flatcost_Paid_Till_Date__c +  Int_flatcost_Waived_Till_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int Flatcost (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_Servicetax_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int Servicetax (Due)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_Servicetax_Pending__c</fullName>
        <formula>Int_Servicetax_Due__c - ( Int_servicetax_waived_till_date__c  +  Int_servicetax_paid_till_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int Servicetax (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_flatcost_Paid_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int Flatcost (Paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_flatcost_Waived_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int Flatcost (Waived)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_servicetax_paid_till_date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int ServiceTax (Paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_servicetax_waived_till_date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int Servicetax (Waived)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <formula>Amount_Demanded_Till_Date__c -  Amount_Recd_Till_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Service__c</fullName>
        <formula>Service_Tax_Demanded_Till_Date__c -  Service_Tax_Recd_Till_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Demanded__c</fullName>
        <formula>(Amount_Demanded_Till_Date__c /  Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Demanded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Paid__c</fullName>
        <formula>Amount_Recd_Till_Date__c / Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PlanCode__c</fullName>
        <label>Plan Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanDt__c</fullName>
        <label>Plan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Unit_Status__c</fullName>
        <formula>TEXT(Project_Unit__r.Unit_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Unit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate the pay plan with the quotation</description>
        <label>Quotation</label>
        <referenceTo>Quotation__c</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Demand_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Demand Invoice</label>
        <referenceTo>Demand_Invoice__c</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Intimation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether the registration demand has been raised</description>
        <label>Registration Intimation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Reached__c</fullName>
        <formula>if(  ( Global_Charge_Name__c == &apos;Basic&apos; &amp;&amp;  Percent_Paid__c &gt; 19.90/100),true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration % Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount_Q__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Amount (On Quote)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Demanded_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Demanded Till Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Recd_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Recd Till Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Pay Plan Header</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Standard_Pay_Plan_Header__c.Tower__c</field>
                <operation>equals</operation>
                <valueField>$Source.Tower__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount 1</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount 2</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Name_1__c</fullName>
        <label>Tax Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Name_2__c</fullName>
        <label>Tax Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage_1__c</fullName>
        <label>Tax Percentage 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage_2__c</fullName>
        <label>Tax Percentage 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Interest_Amount__c</fullName>
        <label>Total Interest Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tower__c.ProjectName__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
        <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gst__c</fullName>
        <defaultValue>true</defaultValue>
        <label>gst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>show_registration_demand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>show registration demand</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Pay Plan Header</label>
    <nameField>
        <displayFormat>CPPH-{000}</displayFormat>
        <label>Customer Pay Plan Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Pay Plan Headers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>